--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches: [ "master" ]
     paths:
-      - '.github/workflows/build.yaml'
+      - '.github/workflows/**'
       - '**/*.go'
       - 'go.mod'
       - 'go.sum'
   pull_request:
     branches: [ "master" ]
     paths:
-      - '.github/workflows/build.yaml'
+      - '.github/workflows/**'
       - '**/*.go'
       - 'go.mod'
       - 'go.sum'
